# platform.framework.web.chromium-efl

./: .gitignore  .gn  BUILD.gn  DEPS  PRESUBMIT.py  S_TRUNK_OWNERS  gclient
components/nacl/loader/sandbox_linux/: BUILD.gn  nacl_sandbox_linux.cc
content/browser/ui/: BUILD.gn  DEPS  autofill_rules.json
content/browser/ui/autofill/: autofill_popup_controller.h  autofill_popup_controller_impl.cc  autofill_popup_controller_impl.h  autofill_popup_controller_impl_sec.cc  autofill_popup_controller_impl_sec.h  autofill_popup_layout_model.cc  autofill_popup_layout_model.h  autofill_popup_view.h  autofill_popup_view_android.cc  autofill_popup_view_android.h  autofill_popup_view_android_sec.cc  autofill_popup_view_android_sec.h  autofill_popup_view_delegate.h  content_autofill_client.cc  content_autofill_client.h  content_autofill_client_sec.cc  content_autofill_client_sec.h  popup_constants.h  popup_controller_common.cc  popup_controller_common.h  popup_view_common.cc  popup_view_common.h
services/device/vibration/: BUILD.gn
tizen_src/: .gclient  .gitignore  .gn  BUILD.gn  DEPS  DEPS.efl  LICENSE  README.md  S_TRUNK_OWNERS  VERSION
tizen_src/chromium_impl/base/: BUILD.gn  base_efl.gni  static_map.h
tizen_src/chromium_impl/base/message_loop/: message_pump_ecore.cc  message_pump_ecore.h
tizen_src/chromium_impl/base/tizen/: flags.h  sequence.h
tizen_src/chromium_impl/base/trace_event/: trace_event_ttrace.cc  ttrace.h
tizen_src/chromium_impl/chrome/: chrome_tests_efl.gni
tizen_src/chromium_impl/components/: components.gni
tizen_src/chromium_impl/components/js_dialogs_efl/: BUILD.gn  javascript_dialog_manager_efl.cc  javascript_dialog_manager_efl.h  javascript_modal_dialog_efl.cc  javascript_modal_dialog_efl.h
tizen_src/chromium_impl/content/: BUILD.gn  content_efl.gni
tizen_src/chromium_impl/dlp/: BUILD.gn  privacy-guard-dlp.cc  privacy-guard-dlp.h
tizen_src/chromium_impl/edje_resources/: BUILD.gn  Edge.edc  MainLayout.edc  SelectionHandles.edc
tizen_src/chromium_impl/efl/: BUILD.gn  efl_export.h  init.cc  init.h  window_factory.cc  window_factory.h
tizen_src/chromium_impl/gpu/: gpu_efl.gni
tizen_src/chromium_impl/media/: BUILD.gn  media_efl.gni
tizen_src/chromium_impl/tizen/: BUILD.gn  system_info.cc  system_info.h
tizen_src/chromium_impl/ui/: BUILD.gn  ui_efl.gni  ui_efl_injections.gni
tizen_src/ecore_wrapper/: ecore_x_wayland_wrapper.h
tizen_src/ewk/: BUILD.gn  chromium-ewk.filter  tests_run  utc_gtest_run.sh
tizen_src/ewk/dali_webview_app/: CMakeLists.txt
tizen_src/ewk/efl_integration/: BUILD.gn  authentication_challenge_popup.cc  authentication_challenge_popup.h  autofill_popup_view_efl.cc  autofill_popup_view_efl.h  browser_context_efl.cc  browser_context_efl.h  browser_main_parts_efl.cc  browser_main_parts_efl.h  command_line_efl.cc  command_line_efl.h  content_browser_client_efl.cc  content_browser_client_efl.h  content_main_delegate_efl.cc  content_main_delegate_efl.h  context_menu_controller_efl.cc  context_menu_controller_efl.h  cookie_manager.cc  cookie_manager.h  devtools_delegate_efl.cc  devtools_delegate_efl.h  devtools_port_manager.cc  devtools_port_manager.h  devtools_port_msg.cc  devtools_port_msg.h  devtools_port_shared_memory.cc  devtools_port_shared_memory.h  dvb_protocol_handler.cc  dvb_protocol_handler.h  efl_webprocess.cc  efl_webprocess_main.cc  efl_webprocess_main.h  eweb_accessibility.cc  eweb_accessibility.h  eweb_accessibility_object.cc  eweb_accessibility_object.h  eweb_accessibility_util.cc  eweb_accessibility_util.h  eweb_context.cc  eweb_context.h  (+51 more)
tizen_src/ewk/efl_webview_app/: BUILD.gn  app.c  browser-string.h  efl_webview_app.sh  elm_cycle_app.c  mini_browser.c  org.tizen.chromium-efl.xml.in
tizen_src/ewk/po_tizen/: BUILD.gn  af_ZA.po  am_ET.po  ar.po  as_IN.po  az.po  be_BY.po  bg.po  bh_IN.po  bn.po  bs_BA.po  ca.po  chromium_efl_repack_locales.gni  ckb_IQ.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_MX.po  es_US.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  fr_CA.po  fr_FR.po  ga.po  gl.po  gu.po  ha_NG.po  he_IL.po  hi.po  hr.po  hu.po  (+63 more)
tizen_src/ewk/ubrowser/: BUILD.gn  browser.cc  browser.h  logger.cc  logger.h  main.cc  ubrowser.sh  window.cc  window.h  window_ui.cc  window_ui.h
tizen_src/ewk/unittest/: BUILD.gn  execute_utc_blink.cpp  utc_blink_api_result_locked.h  utc_blink_cb_contextmenu_allowed.cpp  utc_blink_cb_contextmenu_willshow.cpp  utc_blink_cb_editorclient_candidate_closed.cpp  utc_blink_cb_editorclient_candidate_opened.cpp  utc_blink_cb_form_submit.cpp  utc_blink_cb_fullscreen_enterfullscreen.cpp  utc_blink_cb_fullscreen_exitfullscreen.cpp  utc_blink_cb_geolocation_valid.cpp  utc_blink_cb_icon_received.cpp  utc_blink_cb_load_finished.cpp  utc_blink_cb_load_progress.cpp  utc_blink_cb_load_started.cpp  utc_blink_cb_magnifier_hide.cpp  utc_blink_cb_magnifier_show.cpp  utc_blink_cb_popup_blocked.cpp  utc_blink_cb_protocolhandler_unregistration_requested.cpp  utc_blink_cb_redo_size.cpp  utc_blink_cb_title_changed.cpp  utc_blink_cb_undo_size.cpp  utc_blink_cb_uri_changed.cpp  utc_blink_cb_url_changed.cpp  utc_blink_ewk_array_value.cpp  utc_blink_ewk_auth_challenge_credential_cancel_func.cpp  utc_blink_ewk_auth_challenge_credential_use_func.cpp  utc_blink_ewk_auth_challenge_realm_get_func.cpp  utc_blink_ewk_auth_challenge_suspend_func.cpp  utc_blink_ewk_autofill_credit_card_data_get_func.cpp  utc_blink_ewk_autofill_credit_card_data_set_func.cpp  utc_blink_ewk_autofill_credit_card_delete_func.cpp  utc_blink_ewk_autofill_credit_card_id_get_func.cpp  utc_blink_ewk_autofill_credit_card_new_func.cpp  utc_blink_ewk_autofill_profile_data_get_func.cpp  utc_blink_ewk_autofill_profile_data_set_func.cpp  utc_blink_ewk_back_forward_list_count_func.cpp  utc_blink_ewk_back_forward_list_current_item_get_func.cpp  utc_blink_ewk_back_forward_list_item_at_index_get_func.cpp  utc_blink_ewk_back_forward_list_item_original_url_get_func.cpp  (+245 more)
tizen_src/scripts/: fetch_deps.py  fix_coding_style.sh  generate_gclient-efl.py  run-layout-tests
ui/gfx/x/: BUILD.gn
(+2258 files in other folders)
