# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")
import("//mojo/public/tools/bindings/mojom.gni")
if (use_efl) {
  import("//tizen_src/chromium_impl/services/device/vibration/vibration_efl.gni")
}

# On android, VibrationManager mojo interface is implemented directly in Java.
if (!is_android) {
  source_set("vibration") {
    visibility = [
      "//services/device:lib",
      "//services/device:tests",
    ]

    sources = [
      "vibration_manager_impl.h",
      "vibration_manager_impl_default.cc",
    ]

    if (use_efl) {
      sources += external_device_vibration_efl_sources
      sources -= external_exclude_device_vibration_efl_sources
    }

    public_deps = [
      "//services/device/public/interfaces",
    ]

    deps = [
      "//base",
      "//base/third_party/dynamic_annotations",
      "//mojo/public/cpp/bindings",
    ]
  }
}
