# Copyright (c) 2018 Samsung Electronics. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//tizen_src/build/config/tizen_features.gni")

static_library("privacy-guard-dlp") {

  sources = [
    "privacy-guard-dlp.h",
    "privacy-guard-dlp.cc",
  ]
}
