# Copyright (c) 2015 Samsung Electronics. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//tizen_src/build/config/tizen_features.gni")

static_library("system-info") {
  configs += [ "//tizen_src/build:capi-system-info" ]
  configs += [ "//tizen_src/build:libcapi-system-info" ]
  public_configs = [ "//tizen_src/build:capi-system-info-public" ]

  sources = [
    "system_info.h",
    "system_info.cc",
  ]
}
